<resources>
    <string name="app_name">Parcial1Android</string>
    <string name="action_settings">Settings</string>
    <string name="texto_nombrePelicula">Nombre Pelicula</string>
    <string name="texto_nombreDirector">Nombre de director</string>
    <string name="texto_genero">Género</string>
    <string name="texto_idioma">Idioma</string>
    <string name="texto_guardar">Agregar</string>
    <string name="texto_cancelar">Cancelar</string>
    <string name="texto_ordenarPorGenero">Ordenar por género</string>
    <string name="texto_ordenarPorNombre">Ordenar A-Z por nombre</string>
    <string name="texto_inveritLista">Invertir la lista</string>
    <string name="texto_eliminarPrimera">Eliminar la primera</string>
    <string name="hint_nombrePelicula">"Digite nombre de pelicula</string>
    <string name="hint_nombreDirector">"Digite nombre del director</string>
    <string name="texto_listado">LISTADO</string>
    <string name="texto_agregarPeli">Agregar Pelicula</string>
    <string name="texto_mayuscula">Mayúscula</string>
    <string name="idioma_ingles">Ingles</string>
    <string name="idioma_español">Español</string>
    <string name="texto_selectGenero">Seleccione Género</string>
    <string name="texto_cambiarcolor">Cambiar Color del nombre</string>
    <string name="texto_agregar_persona">Agregar Persona</string>
    <string name="text_changecolor">Change COLORS</string>
    <string name="text_uptd">UPDATE</string>

    <string-array name="generos">
        <item>Accion</item>
        <item>Romance</item>
        <item>Aventura</item>
        <item>Drama</item>
        <item>Fantasia</item>
    </string-array>
</resources>
